internal/gatewayapi/testdata/backendtrafficpolicy-with-healthcheck.out.yaml
backendTrafficPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    creationTimestamp: null
    name: policy-for-route-1
    namespace: default
  spec:
    healthCheck:
      active:
        healthyThreshold: 3
        http:
          expectedResponse:
            text: pong
            type: Text
          expectedStatuses:
          - 200
          - 201
          method: GET
          path: /healthz
        interval: 5s
        timeout: 1s
        type: HTTP
        unhealthyThreshold: 3
      passive:
        baseEjectionTime: 2m30s
        consecutive5XxErrors: 5
        consecutiveGatewayErrors: 0
        consecutiveLocalOriginFailures: 5
        interval: 1s
        maxEjectionPercent: 100
        splitExternalLocalOriginErrors: false
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-1
      namespace: default
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-2
        namespace: envoy-gateway
        sectionName: http
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    creationTimestamp: null
    name: policy-for-route-2
    namespace: default
  spec:
    healthCheck:
      active:
        healthyThreshold: 3
        interval: 5s
        tcp:
          receive:
            text: pong
            type: Text
          send:
            text: ping
            type: Text
        timeout: 1s
        type: TCP
        unhealthyThreshold: 3
      passive:
        baseEjectionTime: 10s
        consecutive5XxErrors: 5
        consecutiveGatewayErrors: 0
        consecutiveLocalOriginFailures: 5
        interval: 10s
        maxEjectionPercent: 10
        splitExternalLocalOriginErrors: false
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-2
      namespace: default
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-2
        namespace: envoy-gateway
        sectionName: http
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    creationTimestamp: null
    name: policy-for-route-3
    namespace: default
  spec:
    healthCheck:
      active:
        healthyThreshold: 1
        interval: 3s
        tcp:
          receive:
            binary: RXZlcnl0aGluZyBPSw==
            type: Binary
          send:
            binary: cGluZw==
            type: Binary
        timeout: 1s
        type: TCP
        unhealthyThreshold: 3
      passive:
        baseEjectionTime: 2m40s
        consecutive5XxErrors: 5
        consecutiveGatewayErrors: 0
        consecutiveLocalOriginFailures: 5
        interval: 8ms
        maxEjectionPercent: 11
        splitExternalLocalOriginErrors: false
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-3
      namespace: default
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-2
        namespace: envoy-gateway
        sectionName: http
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    creationTimestamp: null
    name: policy-for-gateway
    namespace: envoy-gateway
  spec:
    healthCheck:
      active:
        healthyThreshold: 1
        http:
          expectedResponse:
            binary: RXZlcnl0aGluZyBPSw==
            type: Binary
          expectedStatuses:
          - 200
          - 300
          method: GET
          path: /healthz
        interval: 3s
        timeout: 500ms
        type: HTTP
        unhealthyThreshold: 3
      passive:
        baseEjectionTime: 2m40s
        consecutive5XxErrors: 5
        consecutiveGatewayErrors: 0
        consecutiveLocalOriginFailures: 5
        interval: 2s
        maxEjectionPercent: 100
        splitExternalLocalOriginErrors: false
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
      namespace: envoy-gateway
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
gateways:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    creationTimestamp: null
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    creationTimestamp: null
    name: gateway-2
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 3
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
grpcRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: GRPCRoute
  metadata:
    creationTimestamp: null
    name: grpcroute-1
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: HTTPRoute
  metadata:
    creationTimestamp: null
    name: httproute-1
    namespace: default
  spec:
    hostnames:
    - gateway.envoyproxy.io
    parentRefs:
    - name: gateway-2
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-2
        namespace: envoy-gateway
        sectionName: http
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: HTTPRoute
  metadata:
    creationTimestamp: null
    name: httproute-2
    namespace: default
  spec:
    hostnames:
    - gateway.envoyproxy.io
    parentRefs:
    - name: gateway-2
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: service-2
        port: 8080
      matches:
      - path:
          value: /v2
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-2
        namespace: envoy-gateway
        sectionName: http
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: HTTPRoute
  metadata:
    creationTimestamp: null
    name: httproute-3
    namespace: default
  spec:
    hostnames:
    - gateway.envoyproxy.io
    parentRefs:
    - name: gateway-2
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: service-3
        port: 8080
      matches:
      - path:
          value: /v3
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-2
        namespace: envoy-gateway
        sectionName: http
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      listeners:
      - address: null
        name: envoy-gateway/gateway-1/http
        ports:
        - containerPort: 10080
          name: http
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
      name: envoy-gateway/gateway-1
  envoy-gateway/gateway-2:
    proxy:
      listeners:
      - address: null
        name: envoy-gateway/gateway-2/http
        ports:
        - containerPort: 10080
          name: http
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-2
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
      name: envoy-gateway/gateway-2
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      text:
      - path: /dev/stdout
    http:
    - address: 0.0.0.0
      hostnames:
      - '*'
      isHTTP2: true
      name: envoy-gateway/gateway-1/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - backendWeights:
          invalid: 0
          valid: 0
        destination:
          name: grpcroute/default/grpcroute-1/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            protocol: GRPC
            weight: 1
        healthCheck:
          active:
            healthyThreshold: 1
            http:
              expectedResponse:
                binary: RXZlcnl0aGluZyBPSw==
              expectedStatuses:
              - 200
              - 300
              method: GET
              path: /healthz
            interval: 3s
            timeout: 500ms
            unhealthyThreshold: 3
          passive:
            baseEjectionTime: 2m40s
            consecutive5XxErrors: 5
            consecutiveGatewayErrors: 0
            consecutiveLocalOriginFailures: 5
            interval: 2s
            maxEjectionPercent: 100
            splitExternalLocalOriginErrors: false
        hostname: '*'
        isHTTP2: true
        name: grpcroute/default/grpcroute-1/rule/0/match/-1/*
  envoy-gateway/gateway-2:
    accessLog:
      text:
      - path: /dev/stdout
    http:
    - address: 0.0.0.0
      hostnames:
      - '*'
      isHTTP2: false
      name: envoy-gateway/gateway-2/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - backendWeights:
          invalid: 0
          valid: 0
        destination:
          name: httproute/default/httproute-2/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            protocol: HTTP
            weight: 1
        healthCheck:
          active:
            healthyThreshold: 3
            interval: 5s
            tcp:
              receive:
                text: pong
              send:
                text: ping
            timeout: 1s
            unhealthyThreshold: 3
          passive:
            baseEjectionTime: 10s
            consecutive5XxErrors: 5
            consecutiveGatewayErrors: 0
            consecutiveLocalOriginFailures: 5
            interval: 10s
            maxEjectionPercent: 10
            splitExternalLocalOriginErrors: false
        hostname: gateway.envoyproxy.io
        isHTTP2: false
        name: httproute/default/httproute-2/rule/0/match/0/gateway_envoyproxy_io
        pathMatch:
          distinct: false
          name: ""
          prefix: /v2
      - backendWeights:
          invalid: 0
          valid: 0
        destination:
          name: httproute/default/httproute-3/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            protocol: HTTP
            weight: 1
        healthCheck:
          active:
            healthyThreshold: 1
            interval: 3s
            tcp:
              receive:
                binary: RXZlcnl0aGluZyBPSw==
              send:
                binary: cGluZw==
            timeout: 1s
            unhealthyThreshold: 3
          passive:
            baseEjectionTime: 2m40s
            consecutive5XxErrors: 5
            consecutiveGatewayErrors: 0
            consecutiveLocalOriginFailures: 5
            interval: 8ms
            maxEjectionPercent: 11
            splitExternalLocalOriginErrors: false
        hostname: gateway.envoyproxy.io
        isHTTP2: false
        name: httproute/default/httproute-3/rule/0/match/0/gateway_envoyproxy_io
        pathMatch:
          distinct: false
          name: ""
          prefix: /v3
      - backendWeights:
          invalid: 0
          valid: 0
        destination:
          name: httproute/default/httproute-1/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            protocol: HTTP
            weight: 1
        healthCheck:
          active:
            healthyThreshold: 3
            http:
              expectedResponse:
                text: pong
              expectedStatuses:
              - 200
              - 201
              method: GET
              path: /healthz
            interval: 5s
            timeout: 1s
            unhealthyThreshold: 3
          passive:
            baseEjectionTime: 2m30s
            consecutive5XxErrors: 5
            consecutiveGatewayErrors: 0
            consecutiveLocalOriginFailures: 5
            interval: 1s
            maxEjectionPercent: 100
            splitExternalLocalOriginErrors: false
        hostname: gateway.envoyproxy.io
        isHTTP2: false
        name: httproute/default/httproute-1/rule/0/match/0/gateway_envoyproxy_io
        pathMatch:
          distinct: false
          name: ""
          prefix: /
